--- a/src/Post.module.css
+++ b/src/Post.module.css
@@ -1,10 +1,35 @@
 .Post {
-  width: 40rem;
   border: 1px dashed gainsboro;
+  width: 30rem;
 }
 
 .PostImage {
+  display: block;
+  position: relative;
+}
+
+.PostImage img {
   width: 100%;
+  height: 100%;
+}
+
+.PostNotes {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding: 1rem 2rem;
+  background-color: rgba(255, 255, 255, 0.75);
+  box-sizing: border-box;
+  border: none;
+  overflow-y: auto;
+}
+
+.PostNotes p {
+  margin: 2rem 0;
 }
 
 .PostProcessing {
