--- a/src/Post.module.css
+++ b/src/Post.module.css
@@ -28,6 +28,15 @@
   overflow-y: auto;
 }
 
+.PostCredit {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 0.5rem 1rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  font-size: 10px;
+}
+
 .PostNotes p {
   margin: 2rem 0;
 }
