--- a/src/Post.module.css
+++ b/src/Post.module.css
@@ -1,6 +1,8 @@
 .Post {
-  border: 1px dashed gainsboro;
   width: 30rem;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .PostImage {
