--- a/src/Posts/Post.module.css
+++ b/src/Posts/Post.module.css
@@ -16,6 +16,18 @@
   height: 100%;
 }
 
+.UnreadNote {
+  position: absolute;
+  bottom: 10px;
+  right: -10px;
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+  background-color: rosybrown;
+  z-index: 10;
+  box-sizing: border-box;
+}
+
 .PostNotes {
   position: absolute;
   top: 0;
