--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
+html {
+  font-size: 10px;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: monospace;
+  font-size: 1.2rem;
+  font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+hr {
+  margin: 4rem 0;
+  border-top: none;
+  border-bottom: 1px dotted black;
 }
