fix processing styles and spotify posts

--- a/src/pages/Posts/Post.module.css
+++ b/src/pages/Posts/Post.module.css
@@ -72,7 +72,8 @@
 }
 
 .PostProcessing {
-  height: 20rem;
+  height: 40rem;
+  width: 40rem;
   display: flex;
   align-items: center;
   justify-content: center;
